--- a/styles.css
+++ b/styles.css
@@ -34,29 +34,41 @@ button {
     color: red;
 }
 
+/* Add member button */
+.add-member-button {
+    width: 30%;
+    margin: auto;
+    border-radius: 5px;
+}
+
 /* Logo and Title Flexbox */
 .logo-title-flex-container {
     display: flex;            
     align-items: center;      
     justify-content: center;
-                  
+     margin-bottom: 40px;     
+     margin-top: 25px;        
 }
 
 .logo-image {
-    width: 100px;             /* Fixed width for the image */
-    height: auto;             /* Maintain aspect ratio */
+    width: 200px;             
+    height: auto;  
 }
 
 .group-title {
-                   
-    font-size: 24px;   
-    text-align: center;       
+  font-family: "Briem Hand", cursive;
+  font-style: normal;
+  font-size: 40px;   
+  text-align: center;       
 }
 
 .participant-records {
     text-align: center;
     color:deeppink;
+    font-size: 30px;
     font-weight: bold;
+    padding-top: 70px;
+    padding-bottom: 40px;
 }
 
 /* Table */
@@ -65,12 +77,13 @@ table {
     width: 90%; 
     margin: 0 auto; /* Center the table horizontally */
     border-collapse: collapse;
+    padding-bottom: 50px;
 }
 
 #table-container {
     width: 80;
-    
     margin: auto;
+    padding-bottom: 50px;
 }
 
 #participant-table {
@@ -111,14 +124,26 @@ td {
     height: 40px; /* fixed height */
 }
 
-/* edit button */
-.actions button.edit {
-    background-color: #007bff;
-}
-
 /* delete button */
 .actions button.delete {
     background-color: #dc3545;
+}
+
+/* Add Member Form */
+.add-member-form {
+    padding-top: 25px;
+    width: 80%;
+    margin: auto;
+}
+
+label {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#new-member-paying {
+    padding-left: 5px;
+    margin-left: 5px;
 }
 
 /* form input fields */
@@ -127,7 +152,7 @@ input[type="date"],
 input[type="number"] {
     padding: 8px;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 1px solid gray;
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 10px;
@@ -146,6 +171,14 @@ input[type="submit"] {
 .add-member-button, .submit-button, .cancel-button {
     background-color: #4CAF50;
     color: white;
+    width: 40%;
+    border-radius: 5px;
+}
+
+/* Highlight name when person becomes paying member */
+[data-id][data-key="firstName"].highlight,
+[data-id][data-key="lastName"].highlight {
+    color: red;
 }
 
 
